--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "Quyenvkbn\\System\\SystemServiceProvider"
