--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "keywords": ["Laravel", "System"],
     "require": {
         "illuminate/support": "~5|~6|~7",
+        "laravel/ui": "^2.0",
         "ckfinder/ckfinder-laravel-package": "v3.5.1.4",
         "jeroennoten/laravel-adminlte": "^3.3",
         "spatie/laravel-permission": "^3.13"
