--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "homepage": "https://github.com/quyenvkbn/system",
     "keywords": ["Laravel", "System"],
+    "license": "GPL-3.0-or-later",
     "require": {
         "illuminate/support": "~5|~6|~7",
         "laravel/ui": "^2.0",
