--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/support": "~5|~6|~7",
         "laravel/ui": "^2.0",
         "ckfinder/ckfinder-laravel-package": "v3.5.1.4",
-        "jeroennoten/laravel-adminlte": "^3.3",
+        "jeroennoten/laravel-adminlte": "3.3",
         "spatie/laravel-permission": "^3.13",
         "kalnoy/nestedset": "^5.0"
     },
